Change deploy.py parameter from --common to --all

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ test_project_conf:
 deploy_globals:
   stage: deploy
   script:
-  - ./deploy.py --common
+  - ./deploy.py --all
   only:
     changes:
     - global.yaml
