--- a/projects/project.env.example
+++ b/projects/project.env.example
@@ -1,15 +1,26 @@
+# Domain of this project
 domain: dev
 project: anm
+# List of users in this project
+# Password not set now
 users:
 - name: user1
+# Set of regions is required for project.
+# All sets of regions you can find in global.yaml
 regions: 
   RegionOne:
     net_scopes:
+# Which scopes is required for project
+# All sets of scopes in region you can find in global.yaml
       test:
+# DNS record answer mode. Avaliable values: round-robin, fixed, random
         dns_record_order: round-robin
+# Wether reverse dns zone
         dns_reverse_zone: true
         dns_ttl: 86400
+# Cidr gets from cloud administrator
         cidr: 192.168.140.0/25
+# Quotas for project
     quotas:
       instances: 10
       cores: 20
